:pencil: Improve API docs
