# src/vrl/conf/api.py
@@ -8,26 +8,11 @@ REST_FRAMEWORK[
 ] = "rest_framework.pagination.PageNumberPagination"
 REST_FRAMEWORK["PAGE_SIZE"] = 100
 
-SECURITY_DEFINITION_NAME = "JWT-Claims"
-
 SWAGGER_SETTINGS = BASE_SWAGGER_SETTINGS.copy()
 SWAGGER_SETTINGS.update(
     {
         "DEFAULT_INFO": "vrl.api.schema.info",
-        "SECURITY_DEFINITIONS": {
-            SECURITY_DEFINITION_NAME: {
-                # OAS 3.0
-                "type": "http",
-                "scheme": "bearer",
-                "bearerFormat": "JWT",
-                # not official...
-                # 'scopes': {},  # TODO: set up registry that's filled in later...
-                # Swagger 2.0
-                # 'name': 'Authorization',
-                # 'in': 'header'
-                # 'type': 'apiKey',
-            }
-        },
+        "SECURITY_DEFINITIONS": {},
         "DEFAULT_FIELD_INSPECTORS": BASE_SWAGGER_SETTINGS["DEFAULT_FIELD_INSPECTORS"][
             1:
         ],
